[package]
name = "trackhawk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "sync",
] }
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
axum = { version = "0.6.20", features = [
    "json",
    "query",
    "tokio",
    "http2",
    "headers",
    "multipart",
    "ws",
] }
toml = "0.7.6"
sqlx = { version = "0.7.1", features = [
    "postgres",
    "migrate",
    "macros",
    "runtime-tokio-native-tls",
    "chrono",
    "json",
    "ipnetwork",
] }
rs-snowflake = "0.6.0"
anyhow = { version = "1.0.71", features = ["std"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
lazy_static = "1.4.0"
once_cell = "1.16.0"
chrono = { version = "0.4.26", features = ["serde"] }
hex = "0.4.3"
serde_json = "1.0.104"
reqwest = { version = "0.11.18", features = ["rustls-tls-native-roots"] }
twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-model = "0.15.2"
futures-util = "0.3.28"
clap = "4.3.21"
twilight-util = { version = "0.15.2", features = ["permission-calculator"] }
twilight-cache-inmemory = { version = "0.15.2", features = [
    "permission-calculator",
] }
handlebars = "4.3.7"
rand = "0.8.5"
